# libblueprint

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: .gitignore  makefile  parse-serialize.c  printinfo  printinfo.c
include/: blueprint.h
src/: blueprint.c  item_dictionary.c  item_dictionary.h  parse.c  parson.c  parson.h  resources.h  serialize.c
